crates/snapshot-tests/tests/snapshots/parser__bad_table_names__unterminated_three.snap
---
source: crates/snapshot-tests/tests/parser.rs
expression: combined
---
error[UnterminatedString]: unterminated literal string, expected `'`
  ┌─ unterminated_three:1:6
  │
1 │ [''']
  │      ^ expected `'`


error: unterminated literal string, expected `'`
 --> unterminated_three:1:6
  |
1 | [''']
  |      ^ expected `'`
Error {
    kind: "UnterminatedString",
    message: "unterminated literal string, expected `'`",
    span: 5..5,
    path: None,
}
